# servo-caisc2026

./: .gitignore  CLAUDE.md  HANDOFF.md  POST_SUBMISSION_AND_REVIEW.md  PUBLICATION.json  README.md  REFERENCE_GUIDE.md  references.bib
submission/release/package/: CITATION.cff  LICENSE  PROTECTED_ARTIFACTS.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  release_attestation.json  servo2_public_manifest.json
submission/release/package/analysis/: adversarial_validation.md  build_servo2_tables.py  current_claim_registry.json  holdout_protocol.md  predicate_contract.md  servo2_artifacts.csv  servo2_audit.py  servo2_build.py  servo2_closure.py  servo2_closure_projection.csv  servo2_closure_statuses.csv  servo2_closure_witnesses.csv  servo2_conformance.py  servo2_curate.py  servo2_domain_anchor_channels.csv  servo2_domain_anchors.csv  servo2_edges.csv  servo2_endpoints.csv  servo2_events.csv  servo2_evidence.py  servo2_evidence_ledger.json  servo2_finalize.py  servo2_generated_manifest.json  servo2_graph.py  servo2_io.py  servo2_occurrences.py  servo2_package.py  servo2_predicates.py  servo2_relations.py  servo2_release.py  servo2_reliability.csv  servo2_schema.py  servo2_selection_ledger.csv  servo2_summary.json  servo2_validate.py  servo_schema.yaml  source_registry.json  tbl-servo2-anchors.tex  tbl-servo2-cases-ko.tex  tbl-servo2-cases.tex  (+2 more)
submission/release/package/analysis/tests/servo2/: conftest.py  test_artifact_reliability_contract.py  test_component_graph_conformance.py  test_discovery_route_contract.py  test_graph_contract.py  test_release_ready_contract.py  (+4 more)
(+1386 files in other folders)
