[project]
name = "servo-schema3-reproducibility"
version = "5.2.6"
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["pytest>=8.4,<10"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["analysis/tests", "analysis/citation_audit/tests"]
pythonpath = [".", "analysis/citation_audit"]
